src/core-crm/objects/Assessment__c/fields/Assessment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Priority__c</fullName>
    <description>An indication of the importance of the assessment toward successfully completing the unit</description>
    <label>Assessment Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>