src/core-crm/objects/Assessment__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The course offering the assessment belongs to</description>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>