src/core-crm/objects/Assessment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The last date to submit the assessment by</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>