src/core-crm/objects/Assessment__c/fields/Grade_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Grade_Contribution__c</fullName>
    <description>The portion the assessment contributes towards the final grade</description>
    <label>Grade Contribution</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>