src/core-crm/objects/Assessment__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>Denotes the order which the assessments are due</description>
    <label>Sequence Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>