src/core-crm/objects/Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sequence_Number__c</columns>
    <columns>NAME</columns>
    <columns>Course_Offering__c</columns>
    <columns>Assessment_Priority__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Grade_Contribution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Development_Team</group>
        <group>Student_Success_Outreach_Manager</group>
        <group>Student_Success_Outreach_Staff</group>
        <group>System_Administrator</group>
        <group>System_Administrator_Modify_All_Data</group>
        <group>System_Administrator_Read_Only</group>
    </sharedTo>
</ListView>